deployment/lb-service30010.yaml
apiVersion: v1
kind: Service
metadata:  
  name: jenkins-loadbalancer
spec:
  selector:    
    app: jenkins
  type: LoadBalancer
  ports:  
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30010
    protocol: TCP
