deployment/4.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 30010
#   nodePort 30010 hat die externe IP 
    name: http
  - port: 50000
    targetPort: 50000
    protocol: TCP
    name: jnlp                 
  selector:
    app: jenkins
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jenkins
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
    - port: 50000
      protocol: TCP      
  podSelector:
    matchLabels:
      app: jenkins
