deployment/networkpolicy.yaml
kind: NetworkPolicy                  
apiVersion: networking.k8s.io/v1
metadata:
  name: jenkins
spec:
  podSelector:
    matchLabels:
      app: jenkins
  ingress:
    - from:
      - podSelector:
          matchLabels:
            access: allow
